<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lcmcl_topics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matsushita.sena@gmail.com">sen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>tutrc_ament</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>lcmcl_msgs</depend>
  <depend>lc_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
