<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lc_map</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="matsushita.sena@gmail.com">sen</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>tutrc_ament</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>msgpack</depend>
    <depend>tf2</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>blackbox</depend>
    <depend>control_panel_msgs</depend>
    <depend>tut_tool</depend>
    <depend>nav2_map_server</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
